--- a/funny.html
+++ b/funny.html
@@ -295,7 +295,7 @@
                 <div class="flip-container">
                   <div class="flipper" >
                     <div class="front" onclick="set(this,4,4)">
-                      ptt登入次數500次以上
+                      不看外表!
                     </div>
                     <div class="back" style="background-image:url('image/orange.png');">
 
@@ -345,7 +345,7 @@
                 <div class="flip-container">
                   <div class="flipper" >
                     <div class="front" onclick="set(this,3,5)">
-                      喜歡看電影/電視
+                      喜歡看電影或電視
                     </div>
                     <div class="back" style="background-image:url('image/pudding.png');">
 
@@ -357,7 +357,7 @@
                 <div class="flip-container">
                   <div class="flipper" >
                     <div class="front" onclick="set(this,4,5)">
-                      偶爾在家耍廢 偶爾出去玩
+                      喜歡偶爾在家耍廢 偶爾出去玩
                     </div>
                     <div class="back" style="background-image:url('image/soda.png');">
 
