--- a/funny.html
+++ b/funny.html
@@ -159,7 +159,7 @@
                 <div class="flip-container">
                   <div class="flipper" >
                     <div class="front" onclick="set(this,3,2)">
-                      不喜歡大男人主義
+                      不喜歡大男人主義(我會幫忙做家事~~)
                     </div>
                     <div class="back" style="background-image:url('image/cookie.png');">
 
@@ -209,7 +209,7 @@
                 <div class="flip-container">
                   <div class="flipper" >
                     <div class="front" onclick="set(this,2,3)">
-                      喜歡看漫畫或看書
+                      彼此可以溝通~
                     </div>
                     <div class="back" style="background-image:url('image/eggplant.png');">
 
@@ -333,7 +333,7 @@
                 <div class="flip-container">
                   <div class="flipper" >
                     <div class="front" onclick="set(this,2,5)">
-                      真誠不說謊
+                      真誠不說謊~
                     </div>
                     <div class="back" style="background-image:url('image/pizza.png');">
 
