--- a/funny.html
+++ b/funny.html
@@ -159,7 +159,7 @@
                 <div class="flip-container">
                   <div class="flipper" >
                     <div class="front" onclick="set(this,3,2)">
-                      不喜歡大男人主義(我會幫忙做家事~~)
+                      不喜歡大男人主義
                     </div>
                     <div class="back" style="background-image:url('image/cookie.png');">
 
@@ -357,7 +357,7 @@
                 <div class="flip-container">
                   <div class="flipper" >
                     <div class="front" onclick="set(this,4,5)">
-                      喜歡偶爾在家耍廢 偶爾出去玩
+                      偶爾出去玩 偶爾在家耍廢 
                     </div>
                     <div class="back" style="background-image:url('image/soda.png');">
 
