--- a/funny.html
+++ b/funny.html
@@ -147,7 +147,7 @@
                 <div class="flip-container">
                   <div class="flipper" >
                     <div class="front" onclick="set(this,2,2)">
-                      身體健康(萬事如意!!)
+                      接受笑點低的男生~~
                     </div>
                     <div class="back" style="background-image:url('image/chocolate.png');">
 
@@ -307,7 +307,7 @@
                 <div class="flip-container">
                   <div class="flipper" >
                     <div class="front" onclick="set(this,5,4)">
-                      愛笑 文靜或活潑不拘!
+                      個性開朗愛笑!
                     </div>
                     <div class="back" style="background-image:url('image/pea.png');">
 
