--- a/funny2.html
+++ b/funny2.html
@@ -29,11 +29,12 @@
 		height: 25px;
 	  }
 	  .progress-bar-danger {
-		background-color: #800080;
+		background-color: rgba(0, 0, 0, 0.7);
 	  }
 	.progress-bar {
 		line-height: 25px;
 	}
+	
 	
 	@media (max-width: 768px) { 	  
 	.radio {
@@ -101,7 +102,7 @@
    <p>3.妳的個性偏向?:</p>
 	<form id="myForm3">
     <div class="radio">
-      <label><input type="radio" name="optradio" value="1">開朗</label><img class="img-responsive" src="https://cdn-origin.cool-style.com.tw/cool/2018/11/d7eb-ikyziqx2371340.jpg"> 
+      <label><input type="radio" name="optradio" value="1">開朗</label><img class="img-responsive" src="https://www.upmedia.mg/upload/article/202104111310201909.jpg"> 
     </div>
     <div class="radio">
       <label><input type="radio" name="optradio" value="2">文靜</label><img class="img-responsive" src="https://images.chinatimes.com/newsphoto/2020-11-22/656/BE0300_P_01_03.jpg"> 
@@ -176,16 +177,19 @@
 	<p>7.妳偏好的顏色:</p>
 	<form id="myForm7">
     <div class="radio">
-      <label><input type="radio" name="optradio" value="2">紅</label><img class="img-responsive" src="https://puui.qpic.cn/qqvideo_ori/0/t05108ys57q_496_280/0"  width="100%" height="345"> 
+      <label><input type="radio" name="optradio" value="2">紅</label><img class="img-responsive" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5GBXY2UseH4JL9c8FryV40IhI3BtsvpCkwsxCU0fzyHJcsgd5vVrXUpP9ioS_A1K5qq4&usqp=CAU"  width="100%" height="345"> 
     </div>
     <div class="radio">
-      <label><input type="radio" name="optradio" value="2">紫</label><img class="img-responsive" src="https://static.wikia.nocookie.net/kurokonobasuke/images/1/1d/Atsushi_Murasakibara_anime.png/revision/latest?cb=20140327194105"  width="100%" height="345"> 
+      <label><input type="radio" name="optradio" value="2">紫</label><img class="img-responsive" src="https://media.vogue.com.tw/photos/60c3838057ed9dbd8e18e05e/16:9/w_1375,h_773,c_limit/%E6%88%AA%E5%9C%96%202021-06-11%20%E4%B8%8B%E5%8D%8811.38.15.png"  width="100%" height="345"> 
     </div>
 	<div class="radio">
-      <label><input type="radio" name="optradio" value="1">藍</label><img class="img-responsive" src="http://images.plurk.com/0e6735e6ac1b6c5838f6144c35cdccae.jpg"  width="100%" height="345"> 
+      <label><input type="radio" name="optradio" value="1">藍</label><img class="img-responsive" src="https://attach.setn.com/newsimages/2020/03/25/2471791-XXL.jpg"  width="100%" height="345"> 
     </div>
 	<div class="radio">
-      <label><input type="radio" name="optradio" value="2">黃</label><img class="img-responsive" src="https://pic.pimg.tw/vare168/1336303756-2301534838.jpg"  width="100%" height="345"> 
+      <label><input type="radio" name="optradio" value="2">黃</label><img class="img-responsive" src="https://pgw.udn.com.tw/gw/photo.php?u=https://uc.udn.com.tw/photo/2020/11/07/1/9031379.png&x=0&y=0&sw=0&sh=0&exp=3600"  width="100%" height="345"> 
+    </div>
+	<div class="radio">
+      <label><input type="radio" name="optradio" value="1">粉紅</label><img class="img-responsive" src="https://ichef.bbci.co.uk/news/640/cpsprodpb/1357/production/_90915940_034533550-1.jpg"  width="100%" height="345"> 
     </div>
 	<div class="radio">
       <label><input type="radio" name="optradio" value="1">其他</label><img class="img-responsive" src="https://image.cache.storm.mg/styles/smg-800x533-fp/s3/media/image/2018/01/26/20180126-053849_U7418_M374298_e2a0.GIF?itok=Qyx2BMZ0"  width="100%" height="345"> 
@@ -333,7 +337,8 @@
   </div>
   
     <div id='test17' class="well">
-	<p>17.想像妳是一個小胖胖，正在很努力減肥，朋友卻想請妳吃大餐。妳覺得他的心態是？:</p>
+	<p>17.想像妳正在很努力減肥，朋友卻想請妳吃大餐。妳覺得他的心態是？:</p>
+	<img class="img-responsive" src="https://attach.setn.com/newsimages/2019/09/12/2126962-XXL.jpg"  width="100%" height="345"> 
 	<form id="myForm17">
     <div class="radio">
       <label><input type="radio" name="optradio" value="1">只是順便叫妳吃飯，沒什麽意思</label>
@@ -389,13 +394,16 @@
 	<p>19.明天要吃喜酒了，而且被耳提面命穿著要得宜!，妳會選擇穿哪一件?:</p>
 	<form id="myForm19">
     <div class="radio">
-      <label><input type="radio" name="optradio" value="1"><img class="img-responsive" src="https://i.imgur.com/vCYVQJK.jpg"></label>
+      <label><input type="radio" name="optradio" value="1"><img class="img-responsive" src="https://cf.shopee.tw/file/4fc1d80b57fcfd5687e0edef9c314951"></label>
     </div>
     <div class="radio">
-      <label><input type="radio" name="optradio" value="1"><img class="img-responsive" src="https://i.imgur.com/NKGru8g.jpg"></label>
+      <label><input type="radio" name="optradio" value="1"><img class="img-responsive" src="https://img.ruten.com.tw/s6/b13/bee/dabk4r290/5/87/22142659763591_990.jpg"></label>
     </div>
 	<div class="radio">
-      <label><input type="radio" name="optradio" value="1"><img class="img-responsive" src="https://i.imgur.com/rxJhCWW.jpg" ></label>
+      <label><input type="radio" name="optradio" value="1"><img class="img-responsive" src="https://i2.momoshop.com.tw/1625454385/goodsimg/0009/074/133/9074133_R_m.webp" ></label>
+    </div>
+	<div class="radio">
+      <label><input type="radio" name="optradio" value="1"><img class="img-responsive" src="https://images.pcone.com.tw/uploads/product_image/1047179/0183c48bbba11d63aa050693b7006f60/0f569f1785143fa1b1feb88c1024de5f.jpg" ></label>
     </div>
 	</br>
 	<button type="button" class="btn btn-info btn-block" id="btn5b" onclick="next(19)">下一題 <span class="badge">20</span></button>
@@ -404,13 +412,16 @@
   
   
     <div id='test20' class="well">
-	<p>20.喜歡看漫畫看書還是攝影嗎?:</p>
+	<p>20.喜歡動態還是靜態興趣?:</p>
 	<form id="myForm20">
     <div class="radio">
-      <label><input type="radio" name="optradio" value="1">看漫畫看書</label><img class="img-responsive" src="https://cdn2.ettoday.net/images/843/d843100.jpg"  width="100%" height="345">
+      <label><input type="radio" name="optradio" value="1">靜態</label><img class="img-responsive" src="https://cdn2.ettoday.net/images/843/d843100.jpg"  width="100%" height="345">
     </div>
     <div class="radio">
-      <label><input type="radio" name="optradio" value="2">攝影</label><img class="img-responsive" src="http://78.media.tumblr.com/b4ad29526d3e6bce02eecc20e41d0488/tumblr_inline_nx0kaqEDgM1tyc2jx_540.jpg"  width="100%" height="345">
+      <label><input type="radio" name="optradio" value="1">動態</label><img class="img-responsive" src="http://78.media.tumblr.com/b4ad29526d3e6bce02eecc20e41d0488/tumblr_inline_nx0kaqEDgM1tyc2jx_540.jpg"  width="100%" height="345">
+    </div>
+	    <div class="radio">
+      <label><input type="radio" name="optradio" value="1">都喜歡</label><img class="img-responsive" src="http://i1.kknews.cc/PGSU37SFgZzvKXLW4P83228Ub8a0RdR2K-61EhQ/0.jpg"  width="100%" height="345">
     </div>
 	</br>
 	<button type="button" class="btn btn-info btn-block" id="btn5b" onclick="next(20)">下一題 <span class="badge">21</span></button>
@@ -451,6 +462,7 @@
   
     <div id='test23' class="well">
 	<p>23.喜歡看電影或電視嗎?:</p>
+		<img class="img-responsive" src="https://www.ttv.com.tw/drama22/LetsOpen/img/bg_header.jpg"  width="100%" height="345"> 
 	<form id="myForm23">
     <div class="radio">
       <label><input type="radio" name="optradio" value="1">喜歡</label>
@@ -502,7 +514,7 @@
 	<p>26.偏好文科還是理工科男生?:</p>
 	<form id="myForm26">
     <div class="radio">
-      <label><input type="radio" name="optradio" value="1">理工科</label><img class="img-responsive" src="http://img3.cache.netease.com/daxue/2013/12/18/201312181002379bfad.jpg"  width="100%" height="345"> 
+      <label><input type="radio" name="optradio" value="1">理工科</label><img class="img-responsive" src="https://cdn.hk01.com/di/media/images/4046469/org/48ec016329154480bd0e5657d10003d1.jpg/Kxu2l1ECn4OPHg8OPi_PiJCRExT6nfefVeZ3AlXmdwI?v=w1920"  width="100%" height="345"> 
     </div>
     <div class="radio">
       <label><input type="radio" name="optradio" value="2">文科</label><img class="img-responsive" src="http://pic.pimg.tw/john547/1352808997-1734484724.jpg"  width="100%" height="345"> 
@@ -610,10 +622,10 @@
 					$(".modeltext").html("配對率"+(total/(8*i))*100+"%");
 					if((total/(8*i))*100 >= 80) {
 						$(".modeltitle").html("超級速配!趕快在一起~~~(誤)");
-						$(".modelimg").attr("src","http://gb.cri.cn/mmsource/images/2013/01/07/93/17082776461414981741.jpg");
+						$(".modelimg").attr("src","https://static.popdaily.com.tw/u/202008/325fc3b1-6224-4fff-b95e-330ec30d8e51.jpg");
 					}else if((total/(8*i))*100 >= 60){
 						$(".modeltitle").html("配對成功!!一起去約會吧XD");
-						$(".modelimg").attr("src","https://pic.pimg.tw/kcnlp/1367722544-509597326.jpg");
+						$(".modelimg").attr("src","https://www.ttv.com.tw/drama12/TakeMeOutTaiwan/images/op.jpg");
 					}else{
 						$(".modeltitle").html("配對失敗，再接再厲QQ");
 						$(".modelimg").attr("src","https://img.toy-people.com/imgur/165059196144.png");
