--- a/funny2.html
+++ b/funny2.html
@@ -222,7 +222,7 @@
       <label><input type="radio" name="optradio" value="1">不管原因一律封殺</label> <img class="img-responsive" src="https://cdn2.ettoday.net/images/247/d247860.jpg"  width="100%" height="345"> 
     </div>
     <div class="radio">
-      <label><input type="radio" name="optradio" value="2">視原因決定</label><img class="img-responsive" src="http://images.xuejuzi.cn/1607/1_160705202419_1.jpg"  width="100%" height="345"> 
+      <label><input type="radio" name="optradio" value="2">視原因決定</label><img class="img-responsive" src="https://2.bp.blogspot.com/-7WSZdBEtYOs/WnhA8M2GLEI/AAAAAAAAAoc/kKoNTeZO4kw8M3xOCgyvNEZQb7AtaAN0gCLcBGAs/s1600/27072558_1787457591548248_57115849732616054_n.jpg"  width="100%" height="345"> 
     </div>
 	  <div class="radio">
       <label><input type="radio" name="optradio" value="3">不管原因一律原諒</label><img class="img-responsive" src="https://pic.pimg.tw/lin08085/1410175338-1657027353.jpg"  width="100%" height="345"> 
@@ -238,7 +238,7 @@
       <label><input type="radio" name="optradio" value="1">黑芝麻</label><img class="img-responsive" src="https://img.cook1cook.com/upload/cover/8/1/24528139594069381.jpg"  width="100%" height="345"> 
     </div>
     <div class="radio">
-      <label><input type="radio" name="optradio" value="1">紫薯</label><img class="img-responsive" src="http://cp1.douguo.net/upload/caiku/6/8/9/600x400_6857451b00a7544b2da999ec78001d19.jpg"  width="100%" height="345"> 
+      <label><input type="radio" name="optradio" value="1">紫薯</label><img class="img-responsive" src="https://www.zhifure.com/upload/images/2018/9/1417623454.jpg"  width="100%" height="345"> 
     </div>
 	 <div class="radio">
       <label><input type="radio" name="optradio" value="1">紅豆</label><img class="img-responsive" src="https://img-global.cpcdn.com/recipes/bc83c087980ced6b/1200x630cq70/photo.jpg"  width="100%" height="345"> 
@@ -391,7 +391,7 @@
   </div>-->
   
           <div id='test19' class="well">
-	<p>19.明天要吃喜酒了，而且被耳提面命穿著要得宜!，妳會選擇穿哪一件?:</p>
+	<p>19.明天要約會了，而且被閨密耳提面命穿著要得宜!，妳會選擇穿哪一件?:</p>
 	<form id="myForm19">
     <div class="radio">
       <label><input type="radio" name="optradio" value="1"><img class="img-responsive" src="https://cf.shopee.tw/file/4fc1d80b57fcfd5687e0edef9c314951"></label>
@@ -421,7 +421,7 @@
       <label><input type="radio" name="optradio" value="1">動態</label><img class="img-responsive" src="http://78.media.tumblr.com/b4ad29526d3e6bce02eecc20e41d0488/tumblr_inline_nx0kaqEDgM1tyc2jx_540.jpg"  width="100%" height="345">
     </div>
 	    <div class="radio">
-      <label><input type="radio" name="optradio" value="1">都喜歡</label><img class="img-responsive" src="http://i1.kknews.cc/PGSU37SFgZzvKXLW4P83228Ub8a0RdR2K-61EhQ/0.jpg"  width="100%" height="345">
+      <label><input type="radio" name="optradio" value="1">都喜歡</label><img class="img-responsive" src="https://pic.pimg.tw/yaiamhaha99/1391413480-2777454768_l.jpg"  width="100%" height="345">
     </div>
 	</br>
 	<button type="button" class="btn btn-info btn-block" id="btn5b" onclick="next(20)">下一題 <span class="badge">21</span></button>
@@ -520,7 +520,7 @@
       <label><input type="radio" name="optradio" value="2">文科</label><img class="img-responsive" src="http://pic.pimg.tw/john547/1352808997-1734484724.jpg"  width="100%" height="345"> 
     </div>
 	 <div class="radio">
-      <label><input type="radio" name="optradio" value="3">都不是是醫科!</label><img class="img-responsive" src="http://kenshin.hk/blog/jdnews/201310/20131101-1.jpg"  width="100%" height="345"> 
+      <label><input type="radio" name="optradio" value="3">都不是是醫科!</label><img class="img-responsive" src="https://cdn.hk01.com/di/media/images/dw/20200509/335752847339687936.jpeg/TfNunTClx6NZjUqLDUlK1AmjVAt5NLxwsald07GpXdM?v=w1920"  width="100%" height="345"> 
     </div>
 	</br>
 	<button type="button" class="btn btn-info btn-block" id="btn5b" onclick="next2(26)">完成</button>
